--- a/css/styles_crear_usuarios.css
+++ b/css/styles_crear_usuarios.css
@@ -6,6 +6,10 @@
     font-family: Arial, sans-serif;
 }
 
+body{
+    background-color: rgb(227, 220, 211);
+}
+
 /* Contenedor del formulario */
 .registro-container {
     width: 100%;
